# the_work_of_dedup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: research-catalog.json  research-scope.json  research-stage-map.json
.claude/skills/academic-researcher/: SKILL.md
.claude/skills/bioinformatics-init-analysis/: README.md  SKILL.md
.claude/skills/biorxiv-database/: SKILL.md
.claude/skills/claude-code-dispatch/: SKILL.md
.claude/skills/codex-dispatch/: SKILL.md
.claude/skills/dataset-discovery/: SKILL.md
.claude/skills/gemini-deep-research/: SKILL.md
.claude/skills/inno-code-survey/: SKILL.md
.claude/skills/inno-deep-research/: SKILL.md
.claude/skills/inno-experiment-analysis/: SKILL.md  USAGE.md
.claude/skills/inno-experiment-dev/: SKILL.md
.claude/skills/inno-figure-gen/: SKILL.md
.claude/skills/inno-grant-proposal/: CREDITS.md  SKILL.md
.claude/skills/inno-idea-eval/: SKILL.md
.claude/skills/inno-idea-generation/: REFERENCE.md  SKILL.md
.claude/skills/inno-paper-reviewer/: SKILL.md
.claude/skills/inno-paper-writing/: SKILL.md  index.js  package.json
.claude/skills/inno-pipeline-planner/: SKILL.md
.claude/skills/inno-prepare-resources/: SKILL.md
2026_new_experiment/download_datasets/: extract_parquet.py  gen_pollution_image.py  generate_audio_swamp.py  generate_text_swamp.py  text_load.py
2026_new_experiment/result_10k/: report.md
2026_new_experiment/the_compare_audio/: make_audio_json_lists.py  measure_time_and_size.py  run_audio_downstream.py  run_nodedup_baseline.py
2026_new_experiment/the_compare_image/: SUMMARY.md  run_semdedup_benchmark.py  run_semdedup_full.py  run_simclr_full.py
audio/method/: pipeline_api.py  qsemdedup.py
docs/: README_sorter.md  plan.md
experiments/scripts/: count_text_labels.py  download_dolma3_jsonl.py  evaluate_10k.py  extract_inspiration_images.py  extract_urbansound8k.py  generate_mini_corpus.py  generate_unusable_bins.py  insert_duplicates.py  jsonl_to_json_files.py  prepare_10k_subset.py  run_full_experiment.py  smoke_adaptive_eps.py  smoke_audio_qsemdedup.py  smoke_cross_modal_quality.py  smoke_e2e.py  smoke_joint_dedup.py  smoke_joint_similarity.py  smoke_qsemdedup_text.py  smoke_sniff_magic.py
experiments/tools/: add_sample_media.py  check_audio_phash_dedup_subset.py  check_audio_phash_pair.py  check_converted.py  check_image_env.py  check_label_regex.py  create_extra_formats.py  encoding_smoke_test.py  generate_mix_dataset_10k.py  naive_baseline_classifier.py  run_comparative_evaluation.py  run_sorter_evaluation.py  validate_image_manifest.py  validate_text_manifest.py
image/method/: pipeline_api.py
paper/: revision_plan.md  审稿意见.md
paper/latex/: main.tex  references.bib
pipelines/: config.py  cross_modal_quality.py  joint_dedup.py  orchestrator.py  qsemdedup_core.py  sorter.py  sorter_stage.py
pipelines/modalities/: audio_runner.py  common.py  image_runner.py  text_runner.py
requirements/: README.md
text/method/: pipeline_api.py  qsemdedup.py
(+142 files in other folders)
